vcluster_versioned_docs/version-0.34.0/production-guide/distributed-compute.mdx
---
title: Distributed Compute Aggregation
sidebar_label: Distributed Compute
sidebar_position: 4
description: Unify GPU compute from multiple sources under one management plane. Day 0, Day 1, and Day 2 path for compute aggregators.
---

One management plane for GPU compute from every source you own or contract. Whether that is a cloud region, a co-located data center, or a compute supplier, each site runs a Standalone Control Plane Cluster. Your central Platform instance sees the full fleet.

**Typical stack:** Central Platform (global). Per-DC Standalone Control Plane Cluster. Private GPU nodes co-located with each Standalone instance. vMetal for owned bare metal sites.

<figure>
  <img
    style={{ display: "block", margin: "0 auto", maxWidth: "100%" }}
    src="/docs/img/production-paths/distributed-compute.png"
    alt="Compute aggregation architecture: central control plane with tenant clusters scheduling work onto distributed capacity sources"
  />
  <figcaption>Central control plane managing tenant workloads across distributed compute capacity sources</figcaption>
</figure>

**What makes this path different:** Every compute source, regardless of where it lives or who operates it, follows the same onboarding playbook. One ops team, one management plane, no per-provider tooling. This architecture also maps to the cluster-level isolation criteria that AI cloud buyers evaluate in frameworks like [ClusterMAX](https://www.vcluster.com/clustermax).

## Day 0: Design decisions

| Decision | Read next | Outcome |
| --- | --- | --- |
| Design the central-regional topology | [Multi-region Platform](/platform/administer/clusters/advanced/multi-region/overview), [Standalone deployment](../deploy/control-plane/binary/basics.mdx) | Central Platform registers each DC's Standalone instance as a connected cluster. Tenant control planes run co-located with their GPU nodes at each site. |
| Define the supplier onboarding playbook | [Standalone HA](../deploy/control-plane/binary/high-availability.mdx), [Private Nodes](../deploy/worker-nodes/private-nodes/overview.mdx), [Auto Nodes](/platform/administer/node-providers/overview) | Standardize the steps to register a new compute source: install Standalone, connect to central Platform, join GPU inventory, validate. |
| Plan networking between sites | [VPN](../deploy/worker-nodes/private-nodes/vpn.mdx) | Each site's tenant clusters connect to their private nodes over VPN. Define whether tenants can span sites or are bound to a single DC. |
| Define tenant isolation at each site | [Private Nodes](../deploy/worker-nodes/private-nodes/overview.mdx), [vNode docs](https://www.vnode.com/docs/) | Each tenant cluster at a site gets its own dedicated GPU nodes. vNode adds runtime isolation for untrusted workloads. |

## Day 1: Stand up the first compute source

1. Deploy [vCluster Platform](/platform/install/quick-start-guide) in the central region. Configure [Platform HA](/platform/maintenance/reliability-scaling/high-availability) and [backup](/platform/maintenance/backup-restore/backup-restore-platform).
2. At the first compute site, install [vCluster Standalone](../deploy/control-plane/binary/basics.mdx) and move to [HA](../deploy/control-plane/binary/high-availability.mdx).
3. Register the site's Standalone Control Plane Cluster with central Platform.
4. Join the site's GPU inventory as private nodes. Configure [Auto Nodes](/platform/administer/node-providers/overview) or [vMetal](https://www.vmetal.ai/docs/) for automated provisioning and reclaim.
5. Configure [templates](/platform/administer/templates/overview) and [quotas](/platform/administer/projects/quotas) in central Platform for this compute source.
6. Provision a test tenant cluster at the site. Validate that it appears in central Platform and that workloads land on the correct GPU nodes.
7. Document the supplier onboarding playbook. Repeat steps 2-6 for each additional compute source.

## Day 2: Operate

| Operation | Read next |
| --- | --- |
| Monitor the distributed fleet | [Fleet monitoring](/platform/maintenance/monitoring/fleet-monitoring-otel) |
| Onboard a new compute source | Supplier onboarding playbook (internal), [Standalone deployment](../deploy/control-plane/binary/basics.mdx) |
| Upgrade across sites | [Upgrade vCluster](../manage/upgrade/upgrade-version.mdx), [upgrade Platform](/platform/maintenance/upgrade-migrate/upgrade) |
| Handle site failures | [Platform HA](/platform/maintenance/reliability-scaling/high-availability), [multi-region Platform](/platform/administer/clusters/advanced/multi-region/overview) |
